new update on index file

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </aside>
     </main>
     <footer>
-        <p>&copy; Geoffrey Onyango, 2025 - Responsive Design Example</p>
+        <p>&copy; Geoffrey Onyango, 2025 - JS and DOM Manipulation</p>
     </footer>
     <script src = "script.js"></script>
 </body>
